--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=tarifa-agua-api
-server.port=8080
-
+server.port=8082
+spring.datasource.password=15759535
 spring.datasource.url=jdbc:postgresql://localhost:5432/tarifa_agua
 spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.open-in-view=false
-
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-
-springdoc.swagger-ui.path=/swagger-ui
+spring.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+springdoc.swagger-ui.path=/swagger-ui.html
